Attempt a conversion to Erlang.mk build system
The Elixir source file doesn't build so far.

Erlang.mk itself required a bugfix which will be submitted upstream.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-/ebin
-/deps
-/dist
-/build
+.DS_Store
 erl_crash.dump
+.sw?
+.*.sw?
+*.beam
+/.erlang.mk/
+/cover/
+/deps/
+/doc/
+/ebin/
+/logs/
+/plugins/
+
+/rabbitmq_recent_history_exchange.d
